<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ankit.quickquiz.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/sign_up_image_padding"
        android:scaleType="centerCrop"
        android:src="@drawable/quick_quiz"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">


        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/et_margin"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            app:passwordToggleDrawable="@drawable/ic_vector_eye"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/et_margin"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- UserName Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/et_margin"
                android:hint="@string/hint_username"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@color/login_button_clr"
            android:text="Sign Up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/tv_link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/already_account_login"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/txt_size_forget_pass"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
