<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ankit.quickquiz.ForgetPasswordActivity">

    <ProgressBar
        android:id="@+id/pb_loading_questions_fpa"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cl_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">


            <!-- OTP Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:visibility="gone"
                app:passwordToggleDrawable="@drawable/ic_vector_eye"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_fp_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/et_margin"
                    android:hint="@string/hint_otp"
                    android:inputType="numberPassword"
                    android:visibility="gone"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_fp_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/et_margin"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                app:passwordToggleDrawable="@drawable/ic_vector_eye"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_fp_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/et_margin"
                    android:hint="@string/hint_pass"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <!-- Confirm Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                app:passwordToggleDrawable="@drawable/ic_vector_eye"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_fp_confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/et_margin"
                    android:hint="@string/hint_confirm_pass"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginTop="24dp"
                android:background="@color/login_button_clr"
                android:text="Change Password"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/change_password_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="We will send a one time password on the provided email id. In order to change password you have to confirm it."
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/txt_size_forget_pass"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</android.support.design.widget.CoordinatorLayout>
